ICU-23270 A failing and non-exhaustive errorprone profile for CI